--- a/views/add.ejs
+++ b/views/add.ejs
@@ -20,8 +20,12 @@
         <div class="col-md-6 shadow-sm bg-white">
             <form action="/" method="POST">
                 <div class="form-group mt-2 mb-2">
-                    <input type="text" class="form-control" placeholder="Enter your name" name="name"
-                        id="nameY"></input>
+                    <!-- <input type="text" class="form-control" placeholder="Enter your name" name="name"
+                        id="nameY"></input> -->
+                    <select class="form-control" id="sel1" placeholder="Enter your name" name="name">
+                        <option>Damini</option>
+                        <option>Kushagra</option>
+                    </select>
                 </div>
                 <div class="form-group mt-2 mb-2">
                     <label for="adding-new-short-story">Write your story here</label>
