fixed responsive layout

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -31,13 +31,13 @@
 </head>
 
 <body class="bg-light" style="font-family: 'Manrope', sans-serif;">
-    <div class="row justify-content-center" style="min-width: 100; min-height: 25px;">
+    <div class="row justify-content-center mt-1 ml-1 mr-1" style="min-width: 100; min-height: 25px;">
         <div class="col-11 col-sm-11 col-md-7">
             <a class="btn btn-link shadow-sm mt-3 bg-white back-btn" href="/">Back</a>
             <hr>
         </div>
     </div>
-    <div class="row justify-content-center mt-2">
+    <div class="row justify-content-center mt-2 ml-1 mr-1">
         <div class="col-10 col-sm-10 col-md-6 shadow-sm bg-white rounded-lg">
             <form action="/" method="POST">
                 <div class="form-group mt-2 mb-2">
