--- a/views/add.ejs
+++ b/views/add.ejs
@@ -30,15 +30,15 @@
     </style>
 </head>
 
-<body class="bg-light" style="font-family: 'Manrope', sans-serif;">
+<body class="bg-light p-1" style="font-family: 'Manrope', sans-serif;">
     <div class="row justify-content-center mt-1 ml-1 mr-1" style="min-width: 100; min-height: 25px;">
-        <div class="col-11 col-sm-11 col-md-7">
+        <div class="col-12 col-sm-11 col-md-7">
             <a class="btn btn-link shadow-sm mt-3 bg-white back-btn" href="/">Back</a>
             <hr>
         </div>
     </div>
     <div class="row justify-content-center mt-2 ml-1 mr-1">
-        <div class="col-10 col-sm-10 col-md-6 shadow-sm bg-white rounded-lg">
+        <div class="col-12 col-sm-11 col-md-6 shadow-sm bg-white rounded-lg">
             <form action="/" method="POST">
                 <div class="form-group mt-2 mb-2">
                     <!-- <input type="text" class="form-control" placeholder="Enter your name" name="name"
@@ -56,7 +56,7 @@
             </form>
         </div>
     </div>
-    <div class="row justify-content-center mt-3 mb-3">
+    <div class="row justify-content-center mt-3 mb-3 ml-1 mr-1">
         <img src="infinity.png" class="img-fluid" alt="logo">
         <!-- <p class="h1 m-0"> .infinite_stories</p> -->
     </div>
