updated db code

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -44,7 +44,7 @@
                     <!-- <input type="text" class="form-control" placeholder="Enter your name" name="name"
                         id="nameY"></input> -->
                     <select class="form-control select-dropdown" id="sel1" placeholder="Enter your name" name="name">
-                        <option>Damini</option>
+                        <option>Naman</option>
                         <option>Kushagra</option>
                     </select>
                 </div>
